--- a/ScannerPage/styles.css
+++ b/ScannerPage/styles.css
@@ -341,3 +341,13 @@ body {
 .deleteRecapRow:hover {
   background-color: #cc0000;
 }
+
+img {
+  width: 10px;
+  height: auto;
+}
+
+.drapeaux {
+  width: 20px;
+  height: auto;
+}
