--- a/ProfilePage/styles.css
+++ b/ProfilePage/styles.css
@@ -159,11 +159,38 @@ main {
 .footer {
   background-color: #0E7ACA;
   color: white;
-  padding: 0.5rem;
   text-align: center;
-  width: 100%;
-  position: relative; /* Changement de position pour éviter qu'il chevauche le contenu */
+  padding: 15px;
   bottom: 0;
+  width: 100%;
+  font-family: 'Roboto', sans-serif;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+#legal-href{
+  color: white;
+  margin-left: 10%;
+  text-decoration: none;
+}
+#politique-href{
+  color: white;
+  margin-left: 2%;
+  text-decoration: none;
+}
+#cgu-href{
+  color: white;
+  margin-left: 2%;
+  text-decoration: none;
+}
+
+#p-legal{
+  color: white;
+}
+#legal-href:hover {
+  text-decoration: underline;
 }
   
   /* Profile Section */
@@ -171,7 +198,7 @@ main {
     padding: 2rem;
     max-width: 800px;
     margin: 2rem auto;
-    margin-bottom: 50px;
+    margin-bottom: 80px;
     background-color: white;
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
