--- a/LoginPage/styles.css
+++ b/LoginPage/styles.css
@@ -11,7 +11,7 @@ html, body {
 }
 
 #body-content {
-    height: calc(100% - 80px); /* Laisse de la place pour le footer */
+    height: calc(100% - 80px); 
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -56,7 +56,7 @@ html, body {
 }
 
 #logo {
-    height: 60px; /* Taille du logo Doctolib */
+    height: 60px;
     width: auto;
 }
 
