--- a/ScannerPage/styles.css
+++ b/ScannerPage/styles.css
@@ -51,7 +51,7 @@ main {
 }
 
 .nav-links select {
-  background: #357ABD; /* Couleur bleue pour s'harmoniser avec le thème */
+  background: #357ABD; 
   color: white;
   border: none;
   padding: 8px;
@@ -63,7 +63,7 @@ main {
 }
 
 .nav-links select:hover {
-  background: #2a5a8d; /* Couleur légèrement plus foncée au survol */
+  background: #2a5a8d; 
 }
 
 .nav-links select:focus {
@@ -148,9 +148,8 @@ main {
   display: block;
 }
 
-/* Ajout d'une icône de flèche pour le bouton du dropdown */
 .user-menu .dropdown-btn::after {
-  content: '\f107'; /* Unicode pour l'icône "fa-chevron-down" */
+  content: '\f107'; 
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
   margin-left: 5px;
@@ -165,9 +164,9 @@ main {
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center; /* Aligne les éléments verticalement */
-  gap: 20px; /* Espace entre les liens */
-  flex-wrap: wrap; /* Permet de passer les liens à la ligne si l'écran est trop petit */
+  align-items: center; 
+  gap: 20px; 
+  flex-wrap: wrap; 
 }
 
 .footer p {
@@ -237,7 +236,7 @@ main {
 }
 
 .modal {
-  display: none; /* Par défaut, la modale est cachée */
+  display: none; 
   position: fixed;
   top: 0;
   left: 0;
@@ -249,7 +248,6 @@ main {
   align-items: center;
 }
 
-/* La modale s'affiche quand elle n'a pas l'attribut hidden */
 .modal:not([hidden]) {
   display: flex;
 }
@@ -260,12 +258,11 @@ main {
   border-radius: 8px;
   width: 80%;
   max-width: 800px;
-  max-height: 60vh; /* Hauteur maximale de 80% de la hauteur de la fenêtre */
-  overflow-y: auto; /* Activer le défilement vertical si le contenu dépasse */
+  max-height: 60vh; 
+  overflow-y: auto; 
   position: relative;
 }
 
-/* Style pour le bouton de fermeture */
 .close {
   position: absolute;
   right: 20px;
@@ -274,7 +271,6 @@ main {
   cursor: pointer;
 }
 
-/* Styles pour le tableau */
 #medicationTable {
   width: 100%;
   border-collapse: collapse;
@@ -285,7 +281,7 @@ main {
 #medicationTable td {
   padding: 10px;
   border: 1px solid #ddd;
-  text-align: center; /* Centre le texte et les éléments à l'intérieur des cellules */
+  text-align: center; 
 }
 
 #medicationTable th {
@@ -295,7 +291,7 @@ main {
 #medicationTable input[type="text"],
 #medicationTable input[type="date"],
 #medicationTable input[type="time"] {
-  width: 90%; /* Prend presque toute la largeur de la cellule */
+  width: 90%; 
   padding: 5px;
   border: 1px solid #ddd;
   border-radius: 4px;
@@ -306,7 +302,6 @@ main {
   cursor: pointer;
 }
 
-/* Style pour le bouton Supprimer les sélectionnés */
 #deleteSelected {
   background-color: #ff4d4d;
   color: white;
@@ -322,7 +317,6 @@ main {
   background-color: #cc0000;
 }
 
-/* Style pour les boutons Ajouter un médicament et Confirmer */
 #addMedication,
 #confirmMedications {
   padding: 10px 20px;
@@ -341,13 +335,12 @@ main {
   color: white;
 }
 
-/* Style pour la section récurrence */
 .recurrence {
   display: flex;
   flex-direction: column;
-  align-items: center; /* Centre le contenu horizontalement */
-  justify-content: center; /* Centre le contenu verticalement */
-  gap: 10px; /* Espace entre les éléments, comme les heures de rappel et le bouton */
+  align-items: center; 
+  justify-content: center; 
+  gap: 10px; 
 }
 
 .recurrence label {
@@ -374,14 +367,14 @@ main {
 .reminderTimes {
   display: flex;
   flex-direction: column;
-  gap: 10px; /* Espace entre les champs horaires */
-  margin-bottom: 10px; /* Espace entre les champs horaires et le bouton */
+  gap: 10px; 
+  margin-bottom: 10px; 
 }
 
 .reminderTimeItem {
   display: flex;
   align-items: center;
-  gap: 10px; /* Espace entre le champ de temps et l'icône */
+  gap: 10px; 
 }
 
 .removeTimeIcon {
@@ -398,18 +391,18 @@ main {
 .modal-buttons {
   display: flex;
   justify-content: center;
-  gap: 10px; /* Espace entre les boutons */
-  margin-top: 20px; /* Espace entre le tableau et les boutons */
+  gap: 10px; 
+  margin-top: 20px; 
 }
 
 .recapContainer {
   margin: 20px auto;
   max-width: 800px;
-  padding: 1.5rem 2rem; /* Augmenter le padding pour plus d'espace intérieur */
+  padding: 1.5rem 2rem; 
   background-color: white;
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  overflow: auto; /* Permettre le défilement si le contenu est trop grand */
+  overflow: auto; 
   max-height: 60vh;
 }
 
@@ -448,22 +441,22 @@ main {
   transition: background-color 0.3s ease;
 }
 .deleteRecapRow:disabled {
-  background-color: #ccc; /* Couleur grise */
-  color: #666; /* Couleur du texte */
-  cursor: not-allowed; /* Curseur désactivé */
-  border: none; /* Retirer les bordures */
+  background-color: #ccc; 
+  color: #666; 
+  cursor: not-allowed; 
+  border: none; 
 }
 
 
 .deleteRecapRow:hover:not(:disabled) {
-  background-color: #cc0000; /* Couleur rouge uniquement si le bouton n'est pas désactivé */
+  background-color: #cc0000; 
 }
 
 .deleteRecapRow:disabled {
-  background-color: #ccc; /* Couleur grise */
-  color: #666; /* Couleur du texte */
-  cursor: not-allowed; /* Curseur désactivé */
-  border: none; /* Retirer les bordures */
+  background-color: #ccc; 
+  color: #666; 
+  cursor: not-allowed; 
+  border: none; 
 }
 
 
@@ -482,7 +475,7 @@ main {
 }
 
 .cancelRecapRow {
-  background-color: #f0ad4e; /* Couleur orange pour annuler */
+  background-color: #f0ad4e; 
   color: white;
   border: none;
   padding: 5px 10px;
@@ -496,7 +489,7 @@ main {
 }
 
 .saveRecapRow {
-  background-color: #4CAF50; /* Couleur verte pour sauvegarder */
+  background-color: #4CAF50; 
   color: white;
   border: none;
   padding: 5px 10px;
@@ -521,7 +514,7 @@ main {
   align-items: center;
   gap: 10px;
   margin-bottom: 10px;
-  flex-wrap: wrap; /* Permettre à l'élément de passer à la ligne si nécessaire */
+  flex-wrap: wrap; 
 }
 
 #previewName {
@@ -618,7 +611,7 @@ main {
 .tooltip-icon::after {
   content: attr(title);
   position: absolute;
-  bottom: 150%; /* Adjust this to place the tooltip above or below */
+  bottom: 150%; 
   left: 50%;
   transform: translateX(-50%);
   background-color: #333;
@@ -637,28 +630,89 @@ main {
 }
 
 .add-medication-btn {
-  margin-top: 20px; /* Espace entre le tableau et le bouton */
-  padding: 10px 20px; /* Espace à l'intérieur du bouton */
-  background-color: #4CAF50; /* Couleur de fond du bouton */
-  color: white; /* Couleur du texte */
-  border: none; /* Pas de bordure */
-  border-radius: 5px; /* Coins arrondis */
-  cursor: pointer; /* Curseur de la souris en mode "pointeur" */
-  font-size: 16px; /* Taille du texte */
-  transition: background-color 0.3s ease; /* Animation pour l'effet au survol */
-  display: block; /* Le bouton occupe toute la largeur possible */
-  width: fit-content; /* Ajuste la largeur à la taille du texte */
-  margin-left: auto; /* Centre le bouton */
+  margin-top: 20px; 
+  padding: 10px 20px; 
+  background-color: #4CAF50; 
+  color: white; 
+  border: none; 
+  border-radius: 5px; 
+  cursor: pointer; 
+  font-size: 16px; 
+  transition: background-color 0.3s ease; 
+  display: block; 
+  width: fit-content; 
+  margin-left: auto; 
   margin-right: auto;
 }
 
 .add-medication-btn:hover {
-  background-color: #45a049; /* Couleur de fond au survol */
+  background-color: #45a049; 
 }
 
 .add-medication-btn:disabled {
-  background-color: #ddd; /* Couleur de fond pour le bouton désactivé */
-  cursor: not-allowed; /* Changer le curseur pour indiquer que le bouton est désactivé */
-  color: #666; /* Couleur du texte désactivé */
+  background-color: #ddd; 
+  cursor: not-allowed; 
+  color: #666; 
+}
+
+.delete-modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  justify-content: center;
+  align-items: center;
+}
+
+.delete-modal:not([hidden]) {
+  display: flex;
+}
+
+.delete-modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 80%;
+  max-width: 400px;
+  text-align: center;
+}
+
+.delete-modal-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.delete-btn {
+  background-color: #ff4d4d;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.delete-btn:hover {
+  background-color: #cc0000;
+}
+
+.cancel-btn {
+  background-color: #f0ad4e;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.cancel-btn:hover {
+  background-color: #d98c2e;
 }
 
